--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==7.1.2
+et-xmlfile==1.1.0
 gitdb==4.0.11
 GitPython==3.1.41
 idna==3.6
@@ -17,6 +18,7 @@ jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.3
 numpy==1.24.4
+openpyxl==3.1.2
 packaging==23.2
 pandas==2.0.3
 pillow==10.2.0
