--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==7.1.2
+docopt==0.6.2
 et-xmlfile==1.1.0
 gitdb==4.0.11
 GitPython==3.1.41
@@ -22,6 +23,7 @@ openpyxl==3.1.2
 packaging==23.2
 pandas==2.0.3
 pillow==10.2.0
+pipreqs==0.4.13
 pkgutil-resolve-name==1.3.10
 plotly==5.14.1
 protobuf==4.25.1
@@ -34,7 +36,7 @@ requests==2.31.0
 rpds-py==0.16.2
 six==1.16.0
 smmap==5.0.1
-streamlit==1.31.0 
+streamlit==0.87.0
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
@@ -45,4 +47,5 @@ tzlocal==5.2
 urllib3==2.1.0
 validators==0.22.0
 watchdog==3.0.0
+yarg==0.1.9
 zipp==3.17.0
