--- a/requirements.txt
+++ b/requirements.txt
@@ -13,35 +13,40 @@ et-xmlfile==1.1.0
 gitdb==4.0.11
 GitPython==3.1.41
 idna==3.6
+importlib-metadata==7.0.1
 importlib-resources==6.1.1
 Jinja2==3.1.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+mdurl==0.1.2
 numpy==1.24.4
 openpyxl==3.1.2
 packaging==23.2
 pandas==2.0.3
 pillow==10.2.0
 pipreqs==0.4.13
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
 plotly==5.14.1
 protobuf==4.25.1
 pyarrow==14.0.2
 pydeck==0.8.1b0
+Pygments==2.17.2
 python-dateutil==2.8.2
 pytz==2023.3.post1
 referencing==0.32.1
 requests==2.31.0
+rich==13.7.0
 rpds-py==0.16.2
 six==1.16.0
 smmap==5.0.1
-streamlit==0.87.0
+streamlit==1.31.0
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
 tornado==6.4
-typing-extensions==4.9.0
+typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
 urllib3==2.1.0
