--- a/.github/workflows/ping_streamlit_app.yml
+++ b/.github/workflows/ping_streamlit_app.yml
@@ -1,11 +1,15 @@
 name: Ping Streamlit App
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Corrected cron syntax to run every 5 minutes
+    - cron: '*/5 * * * *'
+
 jobs:
   ping:
-    runs-on: ubuntu-latest  # Recommended to use ubuntu instead of windows
+    runs-on: ubuntu-latest
     steps:
       - name: Ping Streamlit App
         run: |
-          curl -s -o /dev/null "https://pt-app-cyy7yhjaqecurde69nmgvh.streamlit.app/"
+          curl -s -o /dev/null -w "%{http_code}" \
+               -A "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36" \
+               "https://pt-app-cyy7yhjaqecurde69nmgvh.streamlit.app/"
+
