--- a/.github/workflows/ping_streamlit_app.yml
+++ b/.github/workflows/ping_streamlit_app.yml
@@ -9,7 +9,6 @@ jobs:
     steps:
       - name: Ping Streamlit App
         run: |
-          curl -s -o /dev/null -w "%{http_code}" \
+          curl -v -s -o /dev/null -w "%{http_code}\n" \
                -A "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36" \
                "https://pt-app-cyy7yhjaqecurde69nmgvh.streamlit.app/"
-
