--- a/.github/workflows/ping_streamlit_app.yml
+++ b/.github/workflows/ping_streamlit_app.yml
@@ -1,14 +1,15 @@
-name: Ping Streamlit App
+name: Keep Streamlit App Awake
+
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/15 * * * *'  # Every 15 minutes
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Ping Streamlit App
+      - name: Send HTTP Request
         run: |
-          curl -v -s -o /dev/null -w "%{http_code}\n" \
-               -A "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36" \
-               "https://pt-app-cyy7yhjaqecurde69nmgvh.streamlit.app/"
+          curl -I https://pt-app-cyy7yhjaqecurde69nmgvh.streamlit.app/
+
+               
